--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 server/
-.env
-.inst_eng.exe
-.inst_eng.exe.obj
-.inst_eng.pdb
-.test.sh
+env
+inst_eng.exe
+inst_eng.exe.obj
+inst_eng.pdb
+test.sh
