Starting to work on login sys

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 Server_Register_EndPoint = http://127.0.0.1:8080/api/v1/register
 Verification_OTP_endpoint = http://127.0.0.1:8080/api/v1/register/verify
+Login_Endpoint = http://127.0.0.1:8080/api/v1/login
+Verification_URL = http://127.0.0.1:8080
